@@ -23,7 +23,7 @@ import java.util.logging.SimpleFormatter;
 
 
 public class SettingsController {
-    public String Version = "V1.6.2";
+    public final String Version = "V1.6.2";
 
     private static SettingsController OBJ = null;
 
@@ -31,79 +31,79 @@ public class SettingsController {
         try {
             OBJ = new SettingsController();
         } catch (IOException e) {
-            SettingsController.getInstance().logger.warning("Exception occurred: " + e.toString());
+            SettingsController.getInstance().logger.warning("Exception occurred: " + e);
         }
     }
 
-    public StringProperty selectedLanguage = new SimpleStringProperty("English");
-    public StringProperty selectedFiatCurrency = new SimpleStringProperty("EUR");
-    public StringProperty selectedDecimal = new SimpleStringProperty(".");
-    public StringProperty selectedSeperator = new SimpleStringProperty(",");
-    public StringProperty selectedStyleMode = new SimpleStringProperty("Dark Mode");
-    public StringProperty selectedCoin = new SimpleStringProperty("BTC-DFI");
-    public StringProperty selectedPlotCurrency = new SimpleStringProperty("Coin");
-    public StringProperty selectedDefaulUpdateSource = new SimpleStringProperty("Show options");
-    public StringProperty selectedPlotType = new SimpleStringProperty();
-    public StringProperty selectedIntervall = new SimpleStringProperty();
-    public StringProperty tokenBalance = new SimpleStringProperty();
-    public StringProperty tokenBalanceLM = new SimpleStringProperty();
-    public StringProperty tokenAmount = new SimpleStringProperty();
-    public StringProperty tokenYield = new SimpleStringProperty();
-    public StringProperty tokenYieldRewards = new SimpleStringProperty();
-    public StringProperty tokenYieldCommissions = new SimpleStringProperty();
-    public ObjectProperty<LocalDate> dateFrom = new SimpleObjectProperty("2020-11-30");
-    public ObjectProperty<LocalDate> dateTo = new SimpleObjectProperty();
-    public ObjectProperty<LocalDate> exportFrom = new SimpleObjectProperty();
-    public ObjectProperty<LocalDate> exportTo = new SimpleObjectProperty();
-    public ObjectProperty<JSONObject> translationList = new SimpleObjectProperty();
+    public final StringProperty selectedLanguage = new SimpleStringProperty("English");
+    public final StringProperty selectedFiatCurrency = new SimpleStringProperty("EUR");
+    public final StringProperty selectedDecimal = new SimpleStringProperty(".");
+    public final StringProperty selectedSeperator = new SimpleStringProperty(",");
+    public final StringProperty selectedStyleMode = new SimpleStringProperty("Dark Mode");
+    public final StringProperty selectedCoin = new SimpleStringProperty("BTC-DFI");
+    public final StringProperty selectedPlotCurrency = new SimpleStringProperty("Coin");
+    public final StringProperty selectedDefaulUpdateSource = new SimpleStringProperty("Show options");
+    public final StringProperty selectedPlotType = new SimpleStringProperty();
+    public final StringProperty selectedIntervall = new SimpleStringProperty();
+    public final StringProperty tokenBalance = new SimpleStringProperty();
+    public final StringProperty tokenBalanceLM = new SimpleStringProperty();
+    public final StringProperty tokenAmount = new SimpleStringProperty();
+    public final StringProperty tokenYield = new SimpleStringProperty();
+    public final StringProperty tokenYieldRewards = new SimpleStringProperty();
+    public final StringProperty tokenYieldCommissions = new SimpleStringProperty();
+    public final ObjectProperty<LocalDate> dateFrom = new SimpleObjectProperty("2020-11-30");
+    public final ObjectProperty<LocalDate> dateTo = new SimpleObjectProperty();
+    public final ObjectProperty<LocalDate> exportFrom = new SimpleObjectProperty();
+    public final ObjectProperty<LocalDate> exportTo = new SimpleObjectProperty();
+    public final ObjectProperty<JSONObject> translationList = new SimpleObjectProperty();
     public String selectedIntervallInt = "Daily";
-    public StringProperty selectedSource = new SimpleStringProperty("Active Wallet");
-    public StringProperty exportCointracingVariante = new SimpleStringProperty();
-    public StringProperty exportCSVCariante = new SimpleStringProperty();
+    public final StringProperty selectedSource = new SimpleStringProperty("Active Wallet");
+    public final StringProperty exportCointracingVariante = new SimpleStringProperty();
+    public final StringProperty exportCSVCariante = new SimpleStringProperty();
     public boolean showDisclaim = true;
     public boolean showMissingTransaction = true;
     public boolean selectedLaunchDefid = false;
     public boolean selectedLaunchSync = true;
     public boolean checkCointracking = false;
     public boolean updatePython = false;
-    public ArrayList<String> listAddresses = new ArrayList();
+    public final ArrayList<String> listAddresses = new ArrayList();
 
-    public StringProperty lastUpdate = new SimpleStringProperty("-");
+    public final StringProperty lastUpdate = new SimpleStringProperty("-");
     //Combo box filling
-    public String[] cryptoCurrencies = new String[]{"BTC-DFI", "ETH-DFI", "USDT-DFI", "LTC-DFI", "BCH-DFI", "DOGE-DFI", "USDC-DFI","DUSD-DFI","TSLA-DUSD","SPY-DUSD","QQQ-DUSD","PLTR-DUSD","AAPL-DUSD","GME-DUSD","GOOGL-DUSD","BABA-DUSD","ARKK-DUSD","TLT-DUSD","GLD-DUSD","SLV-DUSD","PDBC-DUSD","URTH-DUSD","NVDA-DUSD","AMZN-DUSD","EEM-DUSD","COIN-DUSD","INTC-DUSD","DIS-DUSD","MSFT-DUSD","NFLX-DUSD","VOO-DUSD","MSTR-DUSD","FB-DUSD","MCHI-DUSD"};
-    public String[] plotCurrency = new String[]{"Coin", "Daily Fiat", "Current Fiat"};
-    public String[] styleModes = new String[]{"Light Mode", "Dark Mode"};
-    public String[] datasources = new String[]{"Active Wallet", "All Wallets"};
-    public String[] cointrackingExportVariants = new String[]{"Cumulate All", "Cumulate None","Cumulate Pool Pair","Cumulate Rewards and Commisions"};
-    public String[] csvExportVariants = new String[]{"Export selected to CSV","Export all to CSV","Export all to CSV (Daily cumulated)"};
-    public String[] defaultUpdateSource = new String[]{"Show options", "Update data","Wallet CSV"};
+    public final String[] cryptoCurrencies = new String[]{"BTC-DFI", "ETH-DFI", "USDT-DFI", "LTC-DFI", "BCH-DFI", "DOGE-DFI", "USDC-DFI","DUSD-DFI","TSLA-DUSD","SPY-DUSD","QQQ-DUSD","PLTR-DUSD","AAPL-DUSD","GME-DUSD","GOOGL-DUSD","BABA-DUSD","ARKK-DUSD","TLT-DUSD","GLD-DUSD","SLV-DUSD","PDBC-DUSD","URTH-DUSD","NVDA-DUSD","AMZN-DUSD","EEM-DUSD","COIN-DUSD","INTC-DUSD","DIS-DUSD","MSFT-DUSD","NFLX-DUSD","VOO-DUSD","MSTR-DUSD","FB-DUSD","MCHI-DUSD"};
+    public final String[] plotCurrency = new String[]{"Coin", "Daily Fiat", "Current Fiat"};
+    public final String[] styleModes = new String[]{"Light Mode", "Dark Mode"};
+    public final String[] datasources = new String[]{"Active Wallet", "All Wallets"};
+    public final String[] cointrackingExportVariants = new String[]{"Cumulate All", "Cumulate None","Cumulate Pool Pair","Cumulate Rewards and Commisions"};
+    public final String[] csvExportVariants = new String[]{"Export selected to CSV","Export all to CSV","Export all to CSV (Daily cumulated)"};
+    public final String[] defaultUpdateSource = new String[]{"Show options", "Update data","Wallet CSV"};
 
     //All relevant paths and files
-    public String USER_HOME_PATH = System.getProperty("user.home").replace("\\","/");
-    public String BINARY_FILE_NAME = getPlatform().equals("win") ? "defid.exe" : "defid";
-    public String BINARY_FILE_PATH = System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/" + BINARY_FILE_NAME;
-    public String CONFIG_FILE_PATH =getPlatform() == "win" ?
+    public final String USER_HOME_PATH = System.getProperty("user.home").replace("\\","/");
+    public final String BINARY_FILE_NAME = getPlatform().equals("win") ? "defid.exe" : "defid";
+    public final String BINARY_FILE_PATH = System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/" + BINARY_FILE_NAME;
+    public final String CONFIG_FILE_PATH =getPlatform() == "win" ?
             System.getProperty("user.home").replace("\\","/") + "/.defi/defi.conf" : //WIN PATH
     getPlatform() == "mac" ? System.getProperty("user.home").replace("\\","/")  + "/Library/Application Support/DeFi/.defi/defi.conf" : //MAC PATH
     getPlatform() == "linux" ? System.getProperty("user.home").replace("\\","/")  + "/.defi/defi.conf" : //LINUX PATH
     "";
-    public String DEFI_PORTFOLIO_HOME = getPlatform().equals("win") ?
+    public final String DEFI_PORTFOLIO_HOME = getPlatform().equals("win") ?
             System.getenv("APPDATA").replace("\\","/") + "/defi-portfolio/" : //WIN PATH
             getPlatform().equals("mac") ? System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/" : //MAC PATH
                     getPlatform().equals("linux") ? System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/" : //LINUX PATH;
                             "";
-    public String PORTFOLIO_CONFIG_FILE_PATH = System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/defi.conf";
-    public String SETTING_FILE_PATH = DEFI_PORTFOLIO_HOME + "settings.csv";
-    public String PORTFOLIO_FILE_PATH = DEFI_PORTFOLIO_HOME + "portfolioData.portfolio";
-    public String INCOMPLETE_FILE_PATH = DEFI_PORTFOLIO_HOME + "incompleteList.portfolio";
-    public String strTransactionData = "transactionData.portfolio";
-    public String strCoinPriceData = "coinPriceData.portfolio";
-    public String strStockPriceData = "stockTockenPrices.portfolio";
-    public String[] languages = new String[]{"English", "Deutsch","Espa\u00F1ol","Bokm\u00E5l","Nederlands"};
-    public String[] currencies = new String[]{"EUR", "USD", "CHF"};
+    public final String PORTFOLIO_CONFIG_FILE_PATH = System.getProperty("user.dir").replace("\\","/") + "/PortfolioData/defi.conf";
+    public final String SETTING_FILE_PATH = DEFI_PORTFOLIO_HOME + "settings.csv";
+    public final String PORTFOLIO_FILE_PATH = DEFI_PORTFOLIO_HOME + "portfolioData.portfolio";
+    public final String INCOMPLETE_FILE_PATH = DEFI_PORTFOLIO_HOME + "incompleteList.portfolio";
+    public final String strTransactionData = "transactionData.portfolio";
+    public final String strCoinPriceData = "coinPriceData.portfolio";
+    public final String strStockPriceData = "stockTockenPrices.portfolio";
+    public final String[] languages = new String[]{"English", "Deutsch","Espa\u00F1ol","Bokm\u00E5l","Nederlands"};
+    public final String[] currencies = new String[]{"EUR", "USD", "CHF"};
     public String[] decSeperators = new String[]{".", ","};
     public String[] csvSeperators = new String[]{",", ";"};
-    public Logger logger = Logger.getLogger("Logger");
+    public final Logger logger = Logger.getLogger("Logger");
     public String rpcauth;
     public String rpcuser;
     public String rpcpassword;
@@ -114,7 +114,7 @@ public class SettingsController {
     public boolean debouncer = false;
     public String auth;
 
-    public Timer timer = new Timer("Timer");
+    public final Timer timer = new Timer("Timer");
 
     public String lastExportPath = USER_HOME_PATH;
     public String lastWalletCSVImportPath;
@@ -273,27 +273,27 @@ public class SettingsController {
         FileWriter csvWriter;
         try {
             csvWriter = new FileWriter(SETTING_FILE_PATH);
-            csvWriter.append("SelectedLanguage=" + this.selectedLanguage.getValue()).append("\n");
-            csvWriter.append("SelectedFiatCurrency=" + this.selectedFiatCurrency.getValue()).append("\n");
-            csvWriter.append("SelectedDecimal=" + this.selectedDecimal.getValue()).append("\n");
-            csvWriter.append("SelectedSeperator=" + this.selectedSeperator.getValue()).append("\n");
-            csvWriter.append("SelectedCoin=" + this.selectedCoin.getValue()).append("\n");
-            csvWriter.append("SelectedPlotCurrency=" + this.selectedPlotCurrency.getValue()).append("\n");
-            csvWriter.append("SelectedStyleMode=" + this.selectedStyleMode.getValue()).append("\n");
-            csvWriter.append("SelectedDate=" + this.dateFrom.getValue()).append("\n");
-            csvWriter.append("LastUsedExportPath=" + this.lastExportPath.replace("\\","/")).append("\n");
-            csvWriter.append("ShowDisclaim=" + this.showDisclaim).append("\n");
-            csvWriter.append("SelectedLaunchDefid=" + this.selectedLaunchDefid).append("\n");
-            csvWriter.append("SelectedLaunchSync=" + this.selectedLaunchSync).append("\n");
-            csvWriter.append("SelectedSource=" + this.selectedSource.getValue()).append("\n");
-            csvWriter.append("LastUpdate=" + this.lastUpdate.getValue()).append("\n");
-            csvWriter.append("ExportCointrackinVariante=" + this.exportCointracingVariante.getValue()).append("\n");
-            csvWriter.append("ExportCSVVariante=" + this.exportCSVCariante.getValue()).append("\n");
-            csvWriter.append("ExportFrom=" + this.exportFrom.getValue()).append("\n");
-            csvWriter.append("ExportTo=" + this.exportTo.getValue()).append("\n");
-            csvWriter.append("MissingTransaction=" + this.showMissingTransaction).append("\n");
-            csvWriter.append("DefaultDataSource=" + this.selectedDefaulUpdateSource.getValue()).append("\n");
-            csvWriter.append("LastWalletCSVImportPath=" + this.lastWalletCSVImportPath).append("\n");
+            csvWriter.append("SelectedLanguage=").append(this.selectedLanguage.getValue()).append("\n");
+            csvWriter.append("SelectedFiatCurrency=").append(this.selectedFiatCurrency.getValue()).append("\n");
+            csvWriter.append("SelectedDecimal=").append(this.selectedDecimal.getValue()).append("\n");
+            csvWriter.append("SelectedSeperator=").append(this.selectedSeperator.getValue()).append("\n");
+            csvWriter.append("SelectedCoin=").append(this.selectedCoin.getValue()).append("\n");
+            csvWriter.append("SelectedPlotCurrency=").append(this.selectedPlotCurrency.getValue()).append("\n");
+            csvWriter.append("SelectedStyleMode=").append(this.selectedStyleMode.getValue()).append("\n");
+            csvWriter.append("SelectedDate=").append(String.valueOf(this.dateFrom.getValue())).append("\n");
+            csvWriter.append("LastUsedExportPath=").append(this.lastExportPath.replace("\\", "/")).append("\n");
+            csvWriter.append("ShowDisclaim=").append(String.valueOf(this.showDisclaim)).append("\n");
+            csvWriter.append("SelectedLaunchDefid=").append(String.valueOf(this.selectedLaunchDefid)).append("\n");
+            csvWriter.append("SelectedLaunchSync=").append(String.valueOf(this.selectedLaunchSync)).append("\n");
+            csvWriter.append("SelectedSource=").append(this.selectedSource.getValue()).append("\n");
+            csvWriter.append("LastUpdate=").append(this.lastUpdate.getValue()).append("\n");
+            csvWriter.append("ExportCointrackinVariante=").append(this.exportCointracingVariante.getValue()).append("\n");
+            csvWriter.append("ExportCSVVariante=").append(this.exportCSVCariante.getValue()).append("\n");
+            csvWriter.append("ExportFrom=").append(String.valueOf(this.exportFrom.getValue())).append("\n");
+            csvWriter.append("ExportTo=").append(String.valueOf(this.exportTo.getValue())).append("\n");
+            csvWriter.append("MissingTransaction=").append(String.valueOf(this.showMissingTransaction)).append("\n");
+            csvWriter.append("DefaultDataSource=").append(this.selectedDefaulUpdateSource.getValue()).append("\n");
+            csvWriter.append("LastWalletCSVImportPath=").append(this.lastWalletCSVImportPath).append("\n");
             csvWriter.flush();
             csvWriter.close();
         } catch (IOException e) {
@@ -328,11 +328,11 @@ public class SettingsController {
             String rpcportConfig = configProps.getProperty("rpcport");
             String rpcBindConfig = configProps.getProperty("rpcbind");
             String rpcConnectConfig = configProps.getProperty("rpcconnect");
-            String content = new String(Files.readAllBytes(path), charset);
+            String content = Files.readString(path, charset);
             if(rpcportConfig != null)content = content.replaceAll(rpcportConfig, "8554");
             if(rpcBindConfig != null)content = content.replaceAll(rpcBindConfig, "127.0.0.1");
             if(rpcConnectConfig != null)content = content.replaceAll(rpcConnectConfig, "127.0.0.1");
-            Files.write(path, content.getBytes(charset));
+            Files.writeString(path, content, charset);
         } catch (Exception e) {
             SettingsController.getInstance().logger.warning("Exception occurred: " + e.toString());
         }
